--- a/project/drop.html
+++ b/project/drop.html
@@ -95,11 +95,15 @@
               				height="432" ></video>
 					</center>
      					</body>
-			
-					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
+					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;Firstly, the location information of unmanned vehicles and drones can be obtained through motion capture systems and reflective spheres. By designing a consistent cooperative controller, 
+						appropriate forces or torques are given to unmanned vehicles and drones to achieve convergence in horizontal plane position. Next, a judgment module is designed to lock the current height when the Manhattan distance of the position is less than a threshold, 
+						and fit a descending curve from the previous height to the horizontal plane for altitude adjustment. At this point, the horizontal position will always remain stable.</p>
+					</div>
+						
 				<div class="news-title">
 					<h3 align="left">Experiment 2</h3>
 				</div>
+					<div class="news-detail-content">
 					<body>
 					<center>
         				<video src="/video/Drop_round.mp4" 
@@ -108,10 +112,9 @@
               				height="432" ></video>
 					</center>
      					</body>
-					<p style="margin-bottom: 15px;">2</p>
+					<p style="margin-bottom: 15px;">Compared with experiment 1, the trajectory becomes more complex, and the precision of position convergence is required to be higher, so a prediction link is added to the control.</p>
 					<p><img src="img/changcheng.jpg" alt=""/></p>
-					
-				</div>
+					</div>
 			</div>
 		</div>
 		
