--- a/works.html
+++ b/works.html
@@ -51,7 +51,7 @@
 		
 		<!--头部图片-->
 		<div class="page-banner">
-			<img src="/img/pic6.jpg" alt=""/>
+			<img src="/img/pic6.jpeg" alt=""/>
 		</div>
 		
 		<!--面包屑导航-->
@@ -62,7 +62,7 @@
 			</ul>
 		</div>
 		
-		<!--拍摄作品-->
+		
 		<div class="works">
 			<div class="wrapper">
 				<div class="title">
