--- a/contract.html
+++ b/contract.html
@@ -51,7 +51,7 @@
 		
 		<!--头部图片-->
 		<div class="page-banner">
-			<img src="img/pic4.jpg" alt=""/>
+			<img src="img/pic4.jpeg" alt=""/>
 		</div>
 		
 		<!--面包屑导航-->
