--- a/works.html
+++ b/works.html
@@ -85,7 +85,7 @@
 								</div>
 								<div class="info-txt">
 									<h3>Sliding mode control theory</h3>
-									<p>123</p>
+									<p>Finite time sliding mode control, terminal sliding mode theory, integral sliding mode, non-singular sliding mode</p>
 								</div>
 							</a>
 						</li>
@@ -97,7 +97,7 @@
 								</div>
 								<div class="info-txt">
 									<h3>Adaptive dynamic programming</h3>
-									<p>456</p>
+									<p>Neural networks, approximate optimal control, weight updating, HJB equation</p>
 								</div>
 							</a>
 						</li>
@@ -109,7 +109,7 @@
 								</div>
 								<div class="info-txt">
 									<h3>Fixed-time stability control theory</h3>
-									<p>789</p>
+									<p>Homogeneity theory, terminal sliding mode technique, integration by adding powers</p>
 								</div>
 							</a>
 						</li>
@@ -124,7 +124,7 @@
 								</div>
 								<div class="info-txt">
 									<h3>Mobile robot and Quadrotor UAV</h3>
-									<p>123</p>
+									<p>ROS, Raspberry PI, Ground Station, Dynamic Complement, UWB</p>
 								</div>
 							</a>
 						</li>
@@ -136,7 +136,7 @@
 								</div>
 								<div class="info-txt">
 									<h3>Path planning strategy</h3>
-									<p>123</p>
+									<p>Evolutionary algorithms, dynamic programming, static programming, swarm intelligence algorithms</p>
 								</div>
 							</a>
 						</li>
@@ -148,7 +148,7 @@
 								</div>
 								<div class="info-txt">
 									<h3>Distributed formation control</h3>
-									<p>123</p>
+									<p>Distributed control, centralized control, virtual structure method, event triggering control, leader-follower method</p>
 								</div>
 							</a>
 						</li>
