--- a/project/muti-robots.html
+++ b/project/muti-robots.html
@@ -57,9 +57,9 @@
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
-				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">MATLAB</a></li>
+				<li><a href="/index.html">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="/interesting.html">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Distributed formation control of multiple mobile robots</a></li>
 			</ul>
 		</div>
 		
@@ -67,7 +67,7 @@
 		<div class="news-detail">
 			<div class="wrapper">
 				<div class="news-title">
-					<h2>Learning and perception of MATLAB</h2>
+					<h2>Distributed formation control of multiple mobile robots</h2>
 					<p>
 						<span>Release time：2023-03-14</span>
 					</p>
@@ -75,7 +75,7 @@
 				<div class="news-detail-content">
 				  	<body>
 					<center>
-        				<video src="/video/Drop_line.mp4" 
+        				<video src="/video/formation3qbot2e.mp4" 
                				controls 
                				width="768" 
               				height="432" ></video>
@@ -88,6 +88,7 @@
 				</div>
 			</div>
 		</div>
+		
 		
 		
 		<div class="page-banner">
