--- a/project/muti-robots.html
+++ b/project/muti-robots.html
@@ -72,6 +72,25 @@
 						<span>Release time：2023-03-14</span>
 					</p>
 				</div>
+				<div class="news-title">
+					<h3 align="left">Introduction</h3>
+				</div>
+				
+				<p style="text-align:justify">&ensp;&ensp;&ensp;&ensp;
+				Multi-mobile robot formation control is a crucial task in mobile  robotics research and has gained significant attention in recent years. 
+				The goal of formation control is to coordinate the positions and movements of multiple robots in a way that achieves a desired team behavior.	
+				</p>
+				<p style="text-align:justify">&ensp;&ensp;&ensp;&ensp;
+				With the rapid development of robotics technology, more sophisticated and versatile multi-mobile robot systems are being developed for use in various applications. 
+				Multi-mobile robot formation control has been applied in a range of fields such as surveillance, search and rescue, and environmental monitoring. In order to achieve effective formation control in a multi-mobile robot system, 
+				various control strategies can be employed. One common strategy is the leader-follower approach, which involves designating one robot as the leader, with the other mobile robots following its trajectory. 
+				This approach is particularly useful when the leader needs to navigate through complex environments. Another approach is based on distributed control, where each robot interacts with its neighboring robots to achieve the desired formation. 
+				This decentralized approach is advantageous because it allows for fault tolerance and scalability, as the system can still function even if a few robots fail.	
+				</p>
+				<p style="text-align:justify">&ensp;&ensp;&ensp;&ensp;
+				Overall, multi-mobile robot formation control is an active area of research with great potential for practical applications. By coordinating the movements of multiple robots in a way that achieves a desired formation, 
+				we can unlock new possibilities for autonomous systems and robotic teams.	
+				</p>				
 				<div class="news-detail-content">
 				  	<body>
 					<center>
