--- a/achievement.html
+++ b/achievement.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>	<meta charset="utf-8" />
+	<head>
+	<script type="text/javascript"
+	src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+	</script>	
+	<meta charset="utf-8" />
         <meta name="author" content="order by dede58.com/" /<meta name="Description" content=""/>
 		<meta name="Keywords" content=""/>
 		<title>Cheng Ge homepage</title>
