--- a/project/3DDWA.html
+++ b/project/3DDWA.html
@@ -78,7 +78,7 @@
 				<div class="news-title">
 					<h2>Dynamic programming</h2>
 					<p>
-						<span>Release time：2023-03-14</span>
+						<span>Release time：2022-03-14</span>
 					</p>
 				</div>
 				<div class="news-detail-content">
@@ -89,7 +89,7 @@
 					and all the positions that can be reached after a few seconds are predicted according to the three groups of velocity of the route. A set of evaluation functions (evaluation functions will change in each iteration) is designed to select the optimal velocity value.Three-dimensional DWA dynamic window method can design a smooth path for UAV more easily because it takes into account the speed change of trajectory.</p>
 				  	<body>
 					<center>
-        				<video src="/video/Drop_line.mp4" 
+        				<video src="/video/3d.mp4" 
                				controls 
                				width="768" 
               				height="432" ></video>
