--- a/project/3DDWA.html
+++ b/project/3DDWA.html
@@ -67,8 +67,8 @@
 		<div class="bread-nav">
 			<ul class="wrapper">
 				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">MATLAB</a></li>
+				<li><a href="">Projects</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Simulation of 3D UAV dynamic window approach</a></li>
 			</ul>
 		</div>
 		
