--- a/project/qarm.html
+++ b/project/qarm.html
@@ -23,7 +23,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="/interesting.html">
-						interests
+						Interests
 						<span>MYSELF</span>
 					</a>
 				</li>
@@ -51,7 +51,7 @@
 		
 		<!--头部图片-->
 		<div class="page-banner">
-			<img src="/img/works-banner.jpg" alt=""/>
+			<img src="/img/pic6.jpeg" alt=""/>
 		</div>
 		
 		<!--面包屑导航-->
