--- a/project/bridge.html
+++ b/project/bridge.html
@@ -23,7 +23,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="/interesting.html">
-						interests
+						Interests
 						<span>MYSELF</span>
 					</a>
 				</li>
@@ -51,15 +51,15 @@
 		
 		<!--头部图片-->
 		<div class="page-banner">
-			<img src="/img/works-banner.jpg" alt=""/>
+			<img src="/img/pic6.jpeg" alt=""/>
 		</div>
 		
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
-				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">MATLAB</a></li>
+				<li><a href="/index.html">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="/achievement.html">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Optimal planning and robust control of quayside Bridges</a></li>
 			</ul>
 		</div>
 		
@@ -67,9 +67,9 @@
 		<div class="news-detail">
 			<div class="wrapper">
 				<div class="news-title">
-					<h2>Learning and perception of MATLAB</h2>
+					<h2>Optimal planning and robust control of quayside Bridges</h2>
 					<p>
-						<span>Release time：2023-03-14</span>
+						<span>Release time：2022-01-14</span>
 					</p>
 				</div>
 				<div class="news-detail-content">
@@ -85,7 +85,7 @@
 					
 				  	<body>
 					<center>
-        				<video src="/video/Drop_line.mp4" 
+        				<video src="/video/crane.mp4" 
                				controls 
                				width="768" 
               				height="432" ></video>
