--- a/project/3DDWA.html
+++ b/project/3DDWA.html
@@ -81,6 +81,9 @@
 						<span>Release time：2022-03-14</span>
 					</p>
 				</div>
+				<div class="news-title">
+					<h3 align="left">Introduction</h3>
+				</div>
 				<div class="news-detail-content">
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;Dynamic window approach (DWA) is an efficient velocity space algorithm, which uses evaluation functions such as safety, accuracy and stationarity to calculate the next motion state, and can plan the three-dimensional trajectory of agents in complex environments. 
 					Including a large number of static and dynamic obstacles, path constraints, and performance constraints. This scheme combines the route designed by the three-dimensional dynamic window method with the trajectory tracking control of the four-rotor UAV to realize the dynamic obstacle avoidance process of the UAV. 
