--- a/project/ADP.html
+++ b/project/ADP.html
@@ -69,20 +69,23 @@
 				<div class="news-title">
 					<h2>Learning and perception of MATLAB</h2>
 					<p>
-						<span>Release time：2023-03-14</span>
+						<span>Release time：2022-10-14</span>
 					</p>
 				</div>
+				<div class="news-title">
+					<h3 align="left">Introduction</h3>
+				</div>
+				<p style="text-align:justify">&ensp;&ensp;&ensp;&ensp;The adaptive dynamic programming (ADP), a neural network (NN) based technology, has aroused great research interests recently. 
+				The fundamental principle of this new technique is to improve the control performance by judiciously evaluating system feedback/responses. It can iteratively approximate the optimal control policy and avoid analytically solving the intractable HJB equation.</p>
 				<div class="news-detail-content">
 				  	<body>
 					<center>
-        				<video src="/video/Drop_line.mp4" 
+        				<video src="/video/RL.mp4" 
                				controls 
                				width="768" 
               				height="432" ></video>
 					</center>
      					</body>
-					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
-					<p style="margin-bottom: 15px;">2</p>
 					<p><img src="img/changcheng.jpg" alt=""/></p>
 					
 				</div>
