--- a/project/ADP.html
+++ b/project/ADP.html
@@ -23,7 +23,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="/interesting.html">
-						interests
+						Interests
 						<span>MYSELF</span>
 					</a>
 				</li>
