--- a/project/2DDWA.html
+++ b/project/2DDWA.html
@@ -75,10 +75,7 @@
 				<div class="news-detail-content">
 				  	<body>
 					<center>
-        				<video src="/video/Drop_line.mp4" 
-               				controls 
-               				width="768" 
-              				height="432" ></video>
+        				<img src="/img/Show pictures/plan_control.jpg" alt=""/ width="768" height="432" >
 					</center>
      					</body>
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
