--- a/project/2DDWA.html
+++ b/project/2DDWA.html
@@ -75,7 +75,7 @@
 				<div class="news-detail-content">
 				  	<body>
 					<center>
-        				<img src="/img/Show pictures/plan_control.jpg" alt=""/ width="500" height="350" >
+        				<img src="/img/Show pictures/plan_control.jpg" alt="" width="500" height="350" />
 					</center>
      					</body>
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
