--- a/project/2DDWA.html
+++ b/project/2DDWA.html
@@ -23,7 +23,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="/interesting.html">
-						interests
+						Interests
 						<span>MYSELF</span>
 					</a>
 				</li>
@@ -73,6 +73,9 @@
 					</p>
 				</div>
 				<div class="news-detail-content">
+					<div class="news-title">
+					<h3 align="left">Introduction</h3>
+					</div>
 				  	<body>
 					<center>
         				<img src="/img/Show pictures/plan_control.jpg" alt="" width="400" height="350" />
