--- a/project/bridge.html
+++ b/project/bridge.html
@@ -73,6 +73,9 @@
 					</p>
 				</div>
 				<div class="news-detail-content">
+					<div class="news-title">
+					<h3 align="left">Introduction</h3>
+					</div>
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;A quay crane, also known as a shore crane or a container crane, 
 					is a type of heavy equipment typically used in ports or shipping terminals to move containers or other cargo between ships and ground transport. 
 					The quay crane is mounted on a rail track that runs along the quay, allowing it to move back and forth between different container stacks. 
