--- a/project/2DDWA.html
+++ b/project/2DDWA.html
@@ -78,7 +78,10 @@
 					</div>
 				  	<body>
 					<center>
-        				<img src="/img/Show pictures/plan_control.jpg" width="400" height="350" alt="" />
+        				<img src="/img/Show pictures/plan_control.jpg"
+					controls
+					width="400" 
+					height="350"></img>
 					</center>
      					</body>
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
