--- a/project/2DDWA.html
+++ b/project/2DDWA.html
@@ -76,6 +76,7 @@
 					<div class="news-title">
 					<h3 align="left">Introduction</h3>
 					</div>
+				</div>
 				  	<body>
 					<center>
         				<img src="/img/Show pictures/plan_control.jpg"
@@ -84,6 +85,7 @@
 					height="350"></img>
 					</center>
      					</body>
+				<div class="news-detail-content">
 					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;Planning and Control algorithms are essential components of autonomous systems that enable them to navigate and interact with the environment. 
 					Robotic systems, in particular, rely heavily on these algorithms to perform tasks efficiently and effectively.  A Planning algorithm is responsible for generating a sequence of actions that enable the system to achieve a specific goal. 
 					This algorithm takes into account the current state of the environment, the system's capabilities and limitations, and any obstacles or constraints that may hinder the execution of the desired task. Planning algorithms use techniques such as search, 
