--- a/project/2DDWA.html
+++ b/project/2DDWA.html
@@ -58,8 +58,8 @@
 		<div class="bread-nav">
 			<ul class="wrapper">
 				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">MATLAB</a></li>
+				<li><a href="">Projects</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">The combination test of reverse control method and dynamic programming method</a></li>
 			</ul>
 		</div>
 		
@@ -67,7 +67,7 @@
 		<div class="news-detail">
 			<div class="wrapper">
 				<div class="news-title">
-					<h2>Learning and perception of MATLAB</h2>
+					<h2>The combination test of reverse control method and dynamic programming method</h2>
 					<p>
 						<span>Release time：2023-03-14</span>
 					</p>
