--- a/project/Muti-UAVs.html
+++ b/project/Muti-UAVs.html
@@ -23,7 +23,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="/interesting.html">
-						interests
+						Interests
 						<span>MYSELF</span>
 					</a>
 				</li>
@@ -58,8 +58,8 @@
 		<div class="bread-nav">
 			<ul class="wrapper">
 				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">MATLAB</a></li>
+				<li><a href="">Projects</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Distributed multi-quadrotors system formation control</a></li>
 			</ul>
 		</div>
 		
@@ -67,7 +67,7 @@
 		<div class="news-detail">
 			<div class="wrapper">
 				<div class="news-title">
-					<h2>Learning and perception of MATLAB</h2>
+					<h2>Distributed multi-quadrotors system formation control</h2>
 					<p>
 						<span>Release time：2023-03-14</span>
 					</p>
