--- a/project/Muti-UAVs.html
+++ b/project/Muti-UAVs.html
@@ -69,20 +69,49 @@
 				<div class="news-title">
 					<h2>Distributed multi-quadrotors system formation control</h2>
 					<p>
-						<span>Release time：2023-03-14</span>
+						<span>Release time：2023-04-14</span>
 					</p>
 				</div>
 				<div class="news-detail-content">
+					<div class="news-title">
+					<h3 align="left">Introduction</h3>
+					</div>
+					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;With the diversification and complexity of application scenarios, 
+					a single four-rotor UAV has a single structure, which makes it difficult to perform tasks efficiently. 
+					At the same time, there are other problems in many aspects: (1) the efficiency of a single UAV to perform tasks is low;(2) The type and quantity of 
+					the equipment carried is small, and its role is very limited;(3) The endurance of a single UAV is poor.In view of these limitations, in the face of high risk and 
+					high dynamic environment, UAV has been transformed from a single aircraft to a multi-aircraft "cluster". In the face of uncertain future scenarios, multi-aircraft 
+					cooperation can make up for each other, improve the diversity and complexity of task execution, and focus on improving the overall efficiency of task execution. 
+					On the other hand, multi-aircraft cooperation can also realize AD hoc networking, in which single aircraft can perceive the task environment and exchange information 
+					independently. Meanwhile, multi-aircraft cooperation not only relies on individual power, but also can carry out the task even if individual is damaged or destroyed 
+					in an emergency.The UAV needs multi-aircraft cooperative control to realize the cluster. Multi-aircraft cooperative control can not only exert the agility of single aircraft,
+					but also realize the overall efficiency, so as to achieve the predetermined task.Therefore, the cooperative strategy of multi-quadrotor UAV emerges. 
+					Multi-aircraft cooperation Multiple simple UAVs are added to the task, which can carry sensors with multiple functions, achieve resource complementarity and information 
+					fusion, increase the group's information perception ability, reduce the task time, and improve the execution efficiency.Multi-uav collaboration technology is also a hot
+					research topic in recent years, including formation control, target allocation, trajectory planning and so on.Formation control, as a basic technology of multi-aircraft 
+					cooperation, aims to make each UAV maintain or transform in multiple formations under the premise of satisfying the given geometric relationship, which can provide more 
+					stable performance for difficult tasks.In addition, the cooperative control of multiple UAV systems cannot be achieved without the communication network, which requires 
+					multiple UAV systems to realize dynamic networking when executing flight tasks such as formation, so that different task information or UAV flight status information can be 
+					transmitted in real time in the communication network to ensure the completion of the final task.It is obvious that the communication network will also have an 
+					impact on formation of formation, but most traditional formation control methods ignore this point, so how to use the status information obtained from the communication 
+					network to design formation controller is an urgent problem to be solved in engineering practice.With the rapid development of computer and network communication technology,
+					flight formation control based on consistency has attracted wide attention.Consistency refers to the use of neighbor information in the communication network, 
+					each individual build a suitable controller, and finally make all or part of the state quantity of multi-agent system tend to be the same.In this distributed formation mode,
+					it is necessary to form some feasible communication topology between UAVs to realize the overall formation flight control. </p>
+				</div>	
 				  	<body>
 					<center>
-        				<video src="/video/Drop_line.mp4" 
-               				controls 
-               				width="768" 
-              				height="432" ></video>
+        				<img src="/img/Show pictures/multi-uav.jpg"
+					controls
+					width="550" 
+					height="350"></img>
 					</center>
      					</body>
-					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
-					<p style="margin-bottom: 15px;">2</p>
+				<div class="news-detail-content">	
+					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;As an important research field of multi-intelligent system unity, the consistency theory provides a 
+					good idea and a new direction for solving the problem of multi-UAV formation 
+					under different communication networks.For fixed formation, the control objective of multiple UAVs can be considered as reaching the same speed, and the offset is increased on 
+					the basis of reaching the same position.So formation and maintenance of formation can be essentially transformed into consistency problem.</p>
 					<p><img src="img/changcheng.jpg" alt=""/></p>
 					
 				</div>
