--- a/project/ETC.html
+++ b/project/ETC.html
@@ -23,7 +23,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="/interesting.html">
-						interests
+						Interests
 						<span>MYSELF</span>
 					</a>
 				</li>
@@ -51,15 +51,15 @@
 		
 		<!--头部图片-->
 		<div class="page-banner">
-			<img src="/img/works-banner.jpg" alt=""/>
+			<img src="/img/pic6.jpg" alt=""/>
 		</div>
 		
 		<!--面包屑导航-->
 		<div class="bread-nav">
 			<ul class="wrapper">
 				<li><a href="">Homepage</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">Interests</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="">MATLAB</a></li>
+				<li><a href="">Projects</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
+				<li><a href="">Multi-agents event-triggered formation control</a></li>
 			</ul>
 		</div>
 		
@@ -67,24 +67,29 @@
 		<div class="news-detail">
 			<div class="wrapper">
 				<div class="news-title">
-					<h2>Learning and perception of MATLAB</h2>
+					<h2>Multi-agents event-triggered formation control</h2>
 					<p>
 						<span>Release time：2023-03-14</span>
 					</p>
 				</div>
 				<div class="news-detail-content">
+					<div class="news-title">
+					<h3 align="left">Introduction</h3>
+					</div>
+					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;Multi-Agent Event-Triggered Control (MAETC) algorithms have recently emerged as an effective approach for controlling a group of interconnected agents in a distributed manner. MAETC algorithms can be used in a variety of applications, including robotics, swarm systems, and sensor networks. In MAETC algorithms, each agent communicates with its neighbors and updates its control action only when an event-triggering condition is satisfied. This approach reduces the communication and computation requirements of the agents, which can lead to better performance and scalability compared to traditional control approaches.</p>
+				</div>
 				  	<body>
 					<center>
-        				<video src="/video/Drop_line.mp4" 
-               				controls 
-               				width="768" 
-              				height="432" ></video>
+        				<img src="/img/Show pictures/switch.jpg"
+					controls
+					width="550" 
+					height="350"></img>
 					</center>
      					</body>
-					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;1</p>
-					<p style="margin-bottom: 15px;">2</p>
-					<p><img src="img/changcheng.jpg" alt=""/></p>
-					
+				<div class="news-detail-content">
+					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;The core idea of MAETC algorithms is to trigger agents' control updates only when significant changes in the system have occurred, rather than continuously updating the control action. An event-triggering condition is usually determined by comparing the current state of an agent to a threshold, and if that condition is satisfied, the agent updates its control action and communicates the change to its neighbors. This event-based approach reduces the amount of information exchanged between agents and can improve the system's overall stability.</p>
+					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;One common type of MAETC algorithm is the distributed consensus algorithm. In this algorithm, each agent updates its control action based on the difference between its current state and the average state of its neighbors. The event-triggering condition is determined by comparing the magnitude of this difference to a threshold. When the threshold is exceeded, the agent updates its control action and continues the consensus process with its neighbors.Another type of MAETC algorithm is the formation control algorithm. In this algorithm, agents work together to maintain a specific formation pattern while avoiding obstacles and collisions. The event-triggering condition is based on the distance between agents in the formation. When a certain distance threshold is exceeded, an agent updates its control action to maintain the desired formation.</p>
+					<p style="margin-bottom: 15px; text-align:justify">&ensp;&ensp;&ensp;&ensp;Overall, MAETC algorithms represent a promising approach for controlling groups of interconnected agents in a distributed and scalable manner. The event-triggering approach used in MAETC algorithms reduces the communication and computation requirements of the agents and can lead to improved system performance and stability. These algorithms have a wide range of potential applications and are an active area of research in the field of multi-agent systems.</p>		
 				</div>
 			</div>
 		</div>
