--- a/contract.html
+++ b/contract.html
@@ -69,14 +69,11 @@
 				</div>
 				<div class="intro-txt">
 					<h3 style="font-size: 24px;">葛成(Cheng Ge)</h3>
-							<li class="twitter"><a href="https://mail.163.com/" class="icon icon-twitter"><span>163 mail:&nbsp gecheng_std@163.com</span></a></li>
-							<li class="facebook"><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
-							<li class="dribbble"><a href="" class="icon icon-dribbble"><span>Dribbble</span></a></li>
-							<li class="linkedin"><a href="#" class="icon icon-linkedin"><span>LinkedIn</span></a></li>
-							<li class="tumblr"><a href="#" class="icon icon-tumblr"><span>Tumblr</span></a></li>
-							<li class="googleplus"><a href="#" class="icon icon-google-plus"><span>Google+</span></a></li>
-							<li class="github"><a href="" class="icon icon-github"><span>Github</span></a></li>
-										</div>
+							
+					<li class="twitter"><a href="https://mail.163.com/" class="icon icon-twitter"><span>163 mail:&nbsp gecheng_std@163.com</span></a></li>
+
+					<h4 style="font-size: 18px;>Invite a bright moon, pull a clean wind, cook a pot of years, smile to see cold and warmlife!</h4>
+				</div>
 			</div>
 		</div>
 		
