--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="introduce">
 			<div class="wrapper">
 				<dl class="intro-pic">
-					<dt><img src="img/dog.jpeg" alt=""/></dt>
+					<dt><img src="img/gc.jpg" alt=""/></dt>
 					<dd>Cheng Ge</dd>
 				</dl>
 			
