--- a/contract.html
+++ b/contract.html
@@ -65,7 +65,7 @@
 			<div class="intro">
 			<div class="wrapper clearfix">
 				<div class="intro-img">
-					<p><img src="img/intro-1.jpg" alt=""/></p>
+					<p><img src="img/dog.jpeg" alt=""/></p>
 				</div>
 				<div class="intro-txt">
 					<h3 style="font-size: 24px;">葛成(Cheng Ge)</h3>
