--- a/contract.html
+++ b/contract.html
@@ -72,7 +72,7 @@
 							
 					<li class="twitter"><a href="https://mail.163.com/" class="icon icon-twitter"><span>163 mail:&nbsp gecheng_std@163.com</span></a></li>
 
-					<h4 style="font-size: 18px;>Invite a bright moon, pull a clean wind, cook a pot of years, smile to see cold and warmlife!</h4>
+					<h4 style="font-size: 18px;">Invite a bright moon, pull a clean wind, cook a pot of years, smile to see cold and warmlife!</h4>
 				</div>
 			</div>
 		</div>
@@ -80,6 +80,11 @@
 		<div class="page-banner">
 			<img src="img/works-banner.jpg" alt=""/>
 		</div>
+		<div class="page-banner">
+			<img src="img/works-banner.jpg" alt=""/>
+		</div>
+
+							      
 		
 		<div class="footer">
 			<div class="wrapper">
