--- a/contract.html
+++ b/contract.html
@@ -71,8 +71,9 @@
 					<h3 style="font-size: 24px;">葛成(Cheng Ge)</h3>
 							
 					<li class="twitter"><a href="https://mail.163.com/" class="icon icon-twitter"><span>163 mail:&nbsp gecheng_std@163.com</span></a></li>
-
-					<h4 style="font-size: 18px;">Invite a bright moon, pull a clean wind, cook a pot of years, smile to see cold and warmlife!</h4>
+					<center>
+					<h4 style="font-size: 30px;">Invite a bright moon, pull a clean wind, cook a pot of years, smile to see cold and warmlife!</h4>
+					</center>
 				</div>
 			</div>
 		</div>
