--- a/works.html
+++ b/works.html
@@ -163,7 +163,8 @@
 						<h2>Submitted paper</h2>
 						<span>STUDY</span>
 					</div>
-					<p>no</p>
+					<p>[1] <strong>Cheng Ge</strong>, Bo Li, Haichao Zhang and Chenghu Wang, "Fixed-time Super-Twisting-Like Attitude Tracking Control for A Quadrotor UAV",
+					<strong>2022 China Automation Congress (CAC)</strong>, November 2022, doi: 10.1109/CAC57257.2022.10056044.</p>
 				</div>				
 				
 				
