--- a/contract.html
+++ b/contract.html
@@ -71,7 +71,9 @@
 					<h3 style="font-size: 24px;">葛成(Cheng Ge)</h3>
 							
 					<li class="twitter"><a href="https://mail.163.com/" class="icon icon-twitter"><span>163 mail:&nbsp gecheng_std@163.com</span></a></li>
-					
+					<div class="page-banner">
+					<img src="img/works-banner.jpg" alt=""/>
+					</div>
 					<hr></hr>
 					<hr></hr>
 					<center>
